# FuseTS

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  AI4FOOD_Whittaker_OpenEO_NDVI_S2.ipynb  CHANGELOG.md  Jenkinsfile  LICENSE  README.md  api.html  changelog.html  del03_ddf.html  del03_intro.html  del03_outro.html  design.html  environment_whittaker.yml  faq.html  genindex.html  index.html  installation.html  maintenance.html  meta.html  notebooks.html  objects.inv  openeo.html  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  setup.py  workshops.html
.doctrees/: api.doctree  changelog.doctree  del03_ddf.doctree  del03_intro.doctree  del03_outro.doctree  design.doctree  environment.pickle  faq.doctree  index.doctree  installation.doctree  maintenance.doctree  meta.doctree  notebooks.doctree  openeo.doctree  workshops.doctree
.github/workflows/: build-wheel.yml  lint-and-test.yml  sphinx2ghpages.yml
_sources/: del03_ddf.md.txt  del03_outro.md.txt  design.md.txt  installation.md.txt  notebooks.md.txt  openeo.md.txt  workshops.md.txt
docs/: Makefile_ddf  generate_plots.py
docs/del03-ddf/: conf.py
docs/source/: api.md  conf.py  del03_ddf.md  del03_intro.md  del03_outro.md  design.md  faq.md  index.md  index.rst  installation.md  maintenance.rst  meta.md
docs/source/images/: AI4Food_highlevel.drawio  fuseTS_pipeline.drawio
licenses/: Apache.txt  CC BY-NC-SA 4.0.md
notebooks/: AI4FOOD_OpenEO_MOGPR_S1S2.ipynb  AI4FOOD_Whittaker_OpenEO_NDVI_S2.ipynb  FuseTS - Peak Valley Detection.ipynb  Gan_images_processing.ipynb  JPEG 2000.ipynb  MOGPR 1D xarray.ipynb  MOGPR Process Chain Demo.ipynb  openeo_whittaker.py
notebooks/AI4FOOD_PeakValley_Detection_NDVI_S2/: peakvalley_detection.ipynb
notebooks/FOSS4G/: FOSS4G - Tutorial - Extended.ipynb  FOSS4G - Tutorial.ipynb  cropsar_ndvi.nc  foss4g_tutorial.ipynb  raw_s2_ndvi_field.nc  requirements.txt
notebooks/FOSS4G/infrastructure/: Dockerfile
notebooks/Local/: AI4FOOD - MOGPR using S1 and S2.ipynb  AI4FOOD - MOGPR.ipynb  AI4FOOD - Phenology.ipynb  FuseTS - MOGPR.ipynb  FuseTS - Peak Valley Detection.ipynb  FuseTS - Peak Valley Detection_holoviews.ipynb  FuseTS - Phenology.ipynb  FuseTS - Whittaker Smoothing.ipynb  s2_meadow.nc
notebooks/MOGPR S1 S2 Testing/: MOGPR Testing.ipynb
notebooks/OpenEO/: AI4FOOD - MOGPR.ipynb  AI4FOOD - Whittaker.ipynb  FuseTS - CropSAR Full Workflow.ipynb  FuseTS - CropSAR.ipynb  FuseTS - Full Workflow.ipynb  FuseTS - MOGPR Full Workflow-.ipynb  FuseTS - MOGPR Full Workflow.ipynb  FuseTS - MOGPR Multi Source Fusion.ipynb  FuseTS - MOGPR S1 and S2.ipynb  FuseTS - MOGPR.ipynb  FuseTS - Peak Valley Detection.ipynb  FuseTS - Phenology.ipynb  FuseTS - Whittaker.ipynb
src/fusets/: __init__.py  _phenolopy.py  _xarray_utils.py  analytics.py  base.py  ccdc.py  mogpr.py  mogrp.py  peakvalley.py  temporal_outliers.py  whittaker.py
src/fusets/UVScripts/: AI4FOOD_OpenEO_MOGPR_S1S2.ipynb  AI4FOOD_Whittaker_OpenEO_NDVI_S2.ipynb
src/fusets/cropsar/: __init__.py
src/fusets/openeo/: __init__.py  mogpr_band_udf.py  mogpr_udf.py  peakvalley_udf.py  phenology_udf.py  whittaker_udf.py
src/fusets/openeo/services/: __init__.py  dummies.py  helpers.py  integrated_timeseries.py  mogpr.json  mogpr.md  mogpr_s1_s2.json  peakvalley.json  phenology.json  publish_mogpr.py  publish_mogpr_s1_s2.py  publish_peakvalley.py  publish_phenology.py  publish_whittaker.py  whittaker.json
src/fusets/openeo/services/descriptions/: mogpr.md  mogpr_s1_s2.md  peakvalley.md  phenology.md  whittaker.md
tests/: conftest.py  helpers.py  test_ccdc.py  test_cube_construction.py  test_fusets.py  test_mogpr.py  test_peakvalley.py  test_temporal_outliers.py  test_whittaker.py  test_xarray_utils.py
tests/fusets_openeo_tests/: conftest.py  test_peakvalley_openeo.py  test_performance.py  test_predict_ndvi.py  test_whittaker_openeo.py
tests/resources/aois/: be_10ha.geojson  be_1ha.geojson  den_10ha.geojson  den_1ha.geojson  fr_10ha.geojson  fr_1ha.geojson
tests/resources/benchmarks/: performance.json
workshops/BIDS/demo/: BiDS_Demo_FuseTS.ipynb  cropsar_ndvi.nc  field.geojson  mogpr_input.csv  phenology.nc  raw_s2_ndvi_field.nc
workshops/BIDS/workshop/: BiDS_FuseTS.ipynb  requirements.txt
workshops/BIDS/workshop/infrastructure/: Dockerfile
workshops/FOSS4G/demo/: foss4g_tutorial.ipynb  mogpr_input.csv
workshops/FOSS4G/demo/infrastructure/: Dockerfile
