[build-system]
requires = ["setuptools>=42", "numpy==1.23.5"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    'numpy==1.23.5',
    'GPy>=1.10.0',
    'vam.whittaker>=2.0.2',
    'matplotlib>=3.3.4',
    'xarray>=0.20.2',
    'lcmap-pyccd==2021.7.19',
    'openeo',
    'shapely',
]