[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusets"
authors = [
    { name = "Jeroen Dries", email = "jeroen.dries@vito.be" },
]
description = "Time Series Fusion toolbox integrated with openEO"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.8"
dependencies = [
    "numpy==1.23.5",
    "GPy>=1.10.0",
    "vam.whittaker>=2.0.2",
    "matplotlib>=3.3.4",
    "xarray>=0.20.2",
    "lcmap-pyccd==2021.7.19",
    "openeo",
    "shapely",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "Apache Software License"

[project.urls]
Homepage = "https://github.com/Open-EO/FuseTS"
"Bug Tracker" = "https://github.com/Open-EO/FuseTS/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "sphinx>=4.5.0",
    "myst-parser>=0.17.0",
    "h5netcdf",
    "sphinx-autodoc-annotation",
    "sphinx-autodoc-typehints",
    "sphinxcontrib-svg2pdfconverter==1.2.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = [
    "src",
]
namespaces = false
