[metadata]
name = fusets
#version = 0.0.1
author = Jeroen Dries
author_email = jeroen.dries@vito.be
description = Time Series Fusion toolbox integrated with openEO
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
url = https://github.com/Open-EO/FuseTS
project_urls =
    Bug Tracker = https://github.com/Open-EO/FuseTS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    numpy>=1.20.0
    GPy>=1.10.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    sphinx>=4.5.0
    myst-parser>=0.17.0
