[metadata]
name = fusets
#version = 0.0.1
author = Jeroen Dries
author_email = jeroen.dries@vito.be
description = Time Series Fusion toolbox integrated with openEO
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
url = https://github.com/Open-EO/FuseTS
project_urls =
    Bug Tracker = https://github.com/Open-EO/FuseTS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    numpy>=1.20.0
    GPy>=1.10.0
    vam.whittaker>=2.0.2
    # Workaround for missing GPy dependency (https://github.com/SheffieldML/GPy/issues/980)
    matplotlib>=3.3.4
    xarray>=0.20.2

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    sphinx>=4.5.0
    myst-parser>=0.17.0
