[metadata]
name = fusets
#version = 0.0.1
author = Jeroen Dries
author_email = jeroen.dries@vito.be
description = Time Series Fusion toolbox integrated with openEO
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
url = https://github.com/Open-EO/FuseTS
project_urls =
    Bug Tracker = https://github.com/Open-EO/FuseTS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.8
install_requires =
    numpy>=2.0
    vam_whittaker @ https://artifactory.vgt.vito.be/artifactory/python-packages-public/vam_whittaker/2.0.6/vam_whittaker-2.0.6-cp311-cp311-linux_x86_64.whl ; python_version == "3.11"
    vam_whittaker @ https://artifactory.vgt.vito.be/artifactory/python-packages-public/vam_whittaker/2.0.6/vam_whittaker-2.0.6-cp312-cp312-linux_x86_64.whl ; python_version == "3.12"
    vam_whittaker ; sys_platform=="windows"
    xarray>=0.20.2
    lcmap-pyccd==2021.7.19
    openeo
    shapely
    cython

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    pre-commit
    sphinx>=4.5.0
    myst-parser>=0.17.0
    h5netcdf[h5py]
    sphinx-autodoc-annotation
    sphinx-autodoc-typehints
    sphinxcontrib-svg2pdfconverter==1.2.0
